Update the slides

--- a/cours3/index.html
+++ b/cours3/index.html
@@ -664,18 +664,7 @@ head(acteurs_films,4)
 <slide class="" id="slide-27" style="background:;">
   <!--  <a href="#slide-27"></a> -->
   <hgroup>
-    <h1>Exercice 4 (10-15 minutes)</h1>
-  </hgroup>
-  <article data-timings="">
-    <h2>Combien il y a d&#39;acteurs par film depuis les 10 dernières années?</h2>
-
-  </article>
-  <!-- Presenter Notes -->
-</slide>
-<slide class="" id="slide-28" style="background:;">
-  <!--  <a href="#slide-28"></a> -->
-  <hgroup>
-    <h1>Exercice 5 (10-15 minutes)</h1>
+    <h1>Exercice 4 (5 minutes)</h1>
   </hgroup>
   <article data-timings="">
     <h2>Quel film possède le plus d&#39;acteurs?</h2>
@@ -683,20 +672,18 @@ head(acteurs_films,4)
   </article>
   <!-- Presenter Notes -->
 </slide>
-<slide class="" id="slide-29" style="background:;">
-  <!--  <a href="#slide-29"></a> -->
+<slide class="" id="slide-28" style="background:;">
+  <!--  <a href="#slide-28"></a> -->
   <hgroup>
-    <h1>Exercice 6 (10-15 minutes)</h1>
+    <h1>Exercice 5 (10 minutes)</h1>
   </hgroup>
   <article data-timings="">
-    <h2>Existe-t-il un film sans acteurs?</h2>
-
-<p>En vous servant des types de jointures, on voudrait savoir s&#39;il existe des films sans acteurs.</p>
+    <h2>Combien il y a d&#39;acteurs par film entre 1960 et 1980?</h2>
 
   </article>
   <!-- Presenter Notes -->
 </slide>
-<slide class="" id="slide-30" style="background:;">
+<slide class="" id="slide-29" style="background:;">
   <hgroup>
     <h1>Requêtes emboitées</h1>
   </hgroup>
@@ -735,7 +722,7 @@ head(moy_acteurs)
     </div>
   </article>
 </slide>
-<slide class="" id="slide-31" style="background:;">
+<slide class="" id="slide-30" style="background:;">
   <hgroup>
     <h1>Filtrer les requêtes à posteriori</h1>
   </hgroup>
@@ -774,8 +761,8 @@ head(nb_acteurs)
     </div>
   </article>
 </slide>
-<slide class="transition" id="slide-32" style="background:;">
-  <!--  <a href="#slide-32"></a> -->
+<slide class="transition" id="slide-31" style="background:;">
+  <!--  <a href="#slide-31"></a> -->
   <hgroup>
     <h1>Sauvegarder les requêtes</h1>
   </hgroup>
@@ -784,8 +771,8 @@ head(nb_acteurs)
   </article>
   <!-- Presenter Notes -->
 </slide>
-<slide class="" id="slide-33" style="background:;">
-  <!--  <a href="#slide-33"></a> -->
+<slide class="" id="slide-32" style="background:;">
+  <!--  <a href="#slide-32"></a> -->
   <hgroup>
     <h1>Sauvegarder une requête</h1>
   </hgroup>
@@ -795,8 +782,8 @@ head(nb_acteurs)
   </article>
   <!-- Presenter Notes -->
 </slide>
-<slide class="transition" id="slide-34" style="background:;">
-  <!--  <a href="#slide-34"></a> -->
+<slide class="transition" id="slide-33" style="background:;">
+  <!--  <a href="#slide-33"></a> -->
   <hgroup>
     <h1>Manipuler les enregistrements</h1>
   </hgroup>
@@ -805,8 +792,8 @@ head(nb_acteurs)
   </article>
   <!-- Presenter Notes -->
 </slide>
-<slide class="" id="slide-35" style="background:;">
-  <!--  <a href="#slide-35"></a> -->
+<slide class="" id="slide-34" style="background:;">
+  <!--  <a href="#slide-34"></a> -->
   <hgroup>
     <h1>Mettre à jour des enregistrements</h1>
   </hgroup>
@@ -823,8 +810,8 @@ head(nb_acteurs)
   </article>
   <!-- Presenter Notes -->
 </slide>
-<slide class="" id="slide-36" style="background:;">
-  <!--  <a href="#slide-36"></a> -->
+<slide class="" id="slide-35" style="background:;">
+  <!--  <a href="#slide-35"></a> -->
   <hgroup>
     <h1>Supprimer des enregistrements</h1>
   </hgroup>
@@ -844,8 +831,8 @@ head(nb_acteurs)
   </article>
   <!-- Presenter Notes -->
 </slide>
-<slide class="transition" id="slide-37" style="background:;">
-  <!--  <a href="#slide-37"></a> -->
+<slide class="transition" id="slide-36" style="background:;">
+  <!--  <a href="#slide-36"></a> -->
   <hgroup>
     <h1>Travail de la semaine</h1>
   </hgroup>
@@ -854,8 +841,8 @@ head(nb_acteurs)
   </article>
   <!-- Presenter Notes -->
 </slide>
-<slide class="" id="slide-38" style="background:;">
-  <!--  <a href="#slide-38"></a> -->
+<slide class="" id="slide-37" style="background:;">
+  <!--  <a href="#slide-37"></a> -->
   <hgroup>
     <h1>Travail de la semaine</h1>
   </hgroup>
@@ -875,8 +862,8 @@ head(nb_acteurs)
   </article>
   <!-- Presenter Notes -->
 </slide>
-<slide class="" id="slide-39" style="background:;">
-  <!--  <a href="#slide-39"></a> -->
+<slide class="" id="slide-38" style="background:;">
+  <!--  <a href="#slide-38"></a> -->
   <hgroup>
     <h1>Travail de la semaine</h1>
   </hgroup>
@@ -896,8 +883,8 @@ head(nb_acteurs)
   </article>
   <!-- Presenter Notes -->
 </slide>
-<slide class="" id="slide-40" style="background:;">
-  <!--  <a href="#slide-40"></a> -->
+<slide class="" id="slide-39" style="background:;">
+  <!--  <a href="#slide-39"></a> -->
   <hgroup>
     <h1>Lectures</h1>
   </hgroup>
@@ -912,8 +899,8 @@ head(nb_acteurs)
   </article>
   <!-- Presenter Notes -->
 </slide>
-<slide class="transition" id="slide-41" style="background:;">
-  <!--  <a href="#slide-41"></a> -->
+<slide class="transition" id="slide-40" style="background:;">
+  <!--  <a href="#slide-40"></a> -->
   <hgroup>
     <h1>Discussion</h1>
   </hgroup>
@@ -1084,61 +1071,61 @@ head(nb_acteurs)
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=27 title='Exercice 4 (10-15 minutes)'>
+        data-slide=27 title='Exercice 4 (5 minutes)'>
          27
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=28 title='Exercice 5 (10-15 minutes)'>
+        data-slide=28 title='Exercice 5 (10 minutes)'>
          28
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=29 title='Exercice 6 (10-15 minutes)'>
+        data-slide=29 title='Requêtes emboitées'>
          29
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=30 title='Requêtes emboitées'>
+        data-slide=30 title='Filtrer les requêtes à posteriori'>
          30
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=31 title='Filtrer les requêtes à posteriori'>
+        data-slide=31 title='Sauvegarder les requêtes'>
          31
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=32 title='Sauvegarder les requêtes'>
+        data-slide=32 title='Sauvegarder une requête'>
          32
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=33 title='Sauvegarder une requête'>
+        data-slide=33 title='Manipuler les enregistrements'>
          33
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=34 title='Manipuler les enregistrements'>
+        data-slide=34 title='Mettre à jour des enregistrements'>
          34
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=35 title='Mettre à jour des enregistrements'>
+        data-slide=35 title='Supprimer des enregistrements'>
          35
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=36 title='Supprimer des enregistrements'>
+        data-slide=36 title='Travail de la semaine'>
          36
       </a>
     </li>
@@ -1156,20 +1143,14 @@ head(nb_acteurs)
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=39 title='Travail de la semaine'>
+        data-slide=39 title='Lectures'>
          39
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=40 title='Lectures'>
+        data-slide=40 title='Discussion'>
          40
-      </a>
-    </li>
-    <li>
-      <a href="#" target="_self" rel='tooltip' 
-        data-slide=41 title='Discussion'>
-         41
       </a>
     </li>
   </ul>
