--- a/cours4/index.html
+++ b/cours4/index.html
@@ -940,7 +940,7 @@ L[runif(S*S) &lt; C] = 1
 sum(L)
 </code></pre>
 
-<pre><code>## [1] 17
+<pre><code>## [1] 26
 </code></pre>
 
 <pre><code class="r">g &lt;- graph.adjacency(L)
@@ -1116,7 +1116,7 @@ plot(g, vertex.label=NA, edge.arrow.mode = 0,
 modularity(wtc)
 </code></pre>
 
-<pre><code>## [1] 0.5069205
+<pre><code>## [1] 0.3121302
 </code></pre>
 
   </article>
@@ -1134,37 +1134,37 @@ modularity(wtc)
 </code></pre>
 
 <pre><code>##       [,1] [,2] [,3] [,4] [,5] [,6] [,7] [,8] [,9] [,10] [,11] [,12] [,13]
-##  [1,]    0  Inf  Inf  Inf  Inf  Inf  Inf  Inf  Inf   Inf   Inf   Inf   Inf
-##  [2,]  Inf    0    3    3    2    3    1    2    3     1     3     4     2
-##  [3,]  Inf    3    0    4    3    2    2    3    4     2     4     5     1
-##  [4,]  Inf    3    4    0    5    4    2    5    2     4     2     1     3
-##  [5,]  Inf    2    3    5    0    3    3    2    5     1     5     6     2
-##  [6,]  Inf    3    2    4    3    0    2    3    4     2     4     5     1
-##  [7,]  Inf    1    2    2    3    2    0    3    2     2     2     3     1
-##  [8,]  Inf    2    3    5    2    3    3    0    5     1     5     6     2
-##  [9,]  Inf    3    4    2    5    4    2    5    0     4     2     3     3
-## [10,]  Inf    1    2    4    1    2    2    1    4     0     4     5     1
-## [11,]  Inf    3    4    2    5    4    2    5    2     4     0     1     3
-## [12,]  Inf    4    5    1    6    5    3    6    3     5     1     0     4
-## [13,]  Inf    2    1    3    2    1    1    2    3     1     3     4     0
-## [14,]  Inf    3    2    4    3    2    2    3    4     2     4     5     1
-## [15,]  Inf    2    3    1    4    3    1    4    1     3     1     2     2
+##  [1,]    0    3  Inf    2    2    1    2    1    1     2     2     3     1
+##  [2,]    3    0  Inf    2    3    3    2    3    2     1     1     2     4
+##  [3,]  Inf  Inf    0  Inf  Inf  Inf  Inf  Inf  Inf   Inf   Inf   Inf   Inf
+##  [4,]    2    2  Inf    0    2    2    2    1    2     3     1     2     3
+##  [5,]    2    3  Inf    2    0    1    2    1    3     2     2     1     3
+##  [6,]    1    3  Inf    2    1    0    2    1    2     2     3     2     2
+##  [7,]    2    2  Inf    2    2    2    0    1    2     1     3     3     3
+##  [8,]    1    3  Inf    1    1    1    1    0    2     2     2     2     2
+##  [9,]    1    2  Inf    2    3    2    2    2    0     1     1     2     2
+## [10,]    2    1  Inf    3    2    2    1    2    1     0     2     3     3
+## [11,]    2    1  Inf    1    2    3    3    2    1     2     0     1     3
+## [12,]    3    2  Inf    2    1    2    3    2    2     3     1     0     4
+## [13,]    1    4  Inf    3    3    2    3    2    2     3     3     4     0
+## [14,]    2    2  Inf    3    2    1    1    2    2     1     3     3     3
+## [15,]    3    2  Inf    3    1    2    2    2    2     1     3     2     4
 ##       [,14] [,15]
-##  [1,]   Inf   Inf
-##  [2,]     3     2
-##  [3,]     2     3
-##  [4,]     4     1
-##  [5,]     3     4
-##  [6,]     2     3
-##  [7,]     2     1
-##  [8,]     3     4
-##  [9,]     4     1
-## [10,]     2     3
-## [11,]     4     1
-## [12,]     5     2
-## [13,]     1     2
-## [14,]     0     3
-## [15,]     3     0
+##  [1,]     2     3
+##  [2,]     2     2
+##  [3,]   Inf   Inf
+##  [4,]     3     3
+##  [5,]     2     1
+##  [6,]     1     2
+##  [7,]     1     2
+##  [8,]     2     2
+##  [9,]     2     2
+## [10,]     1     1
+## [11,]     3     3
+## [12,]     3     2
+## [13,]     3     4
+## [14,]     0     1
+## [15,]     1     0
 </code></pre>
 
   </article>
@@ -1181,9 +1181,9 @@ modularity(wtc)
 <pre><code class="r">eigen_centrality(g)$vector
 </code></pre>
 
-<pre><code>##  [1] 0.00000000 0.87914845 0.25535344 0.16165703 0.30788603 0.25535344
-##  [7] 0.92771735 0.61577206 0.13100886 1.00000000 0.16165703 0.09954388
-## [13] 0.82937651 0.25535344 0.42551089
+<pre><code>##  [1] 7.042745e-01 3.559471e-01 5.933369e-17 2.969227e-01 6.293763e-01
+##  [6] 7.323360e-01 6.470997e-01 7.689539e-01 5.358650e-01 1.000000e+00
+## [11] 3.933267e-01 3.509112e-01 3.598359e-01 7.640666e-01 6.114424e-01
 </code></pre>
 
   </article>
