--- a/cours4/index.html
+++ b/cours4/index.html
@@ -400,7 +400,7 @@ Date:   Wed Feb 28 20:33:20 2018 -0500
   <article>
     
     <div class='left' style='float:left;width:48%'>
-     <pre><code class="bash">git checkout numeroDeCommit
+     <pre><code class="bash">git checkout 4abdb33e2f6b598aac4d5
 </code></pre>
 
 <p>Permet de se déplacer vers un <code>commit</code> précis.</p>
@@ -452,7 +452,7 @@ Date:   Wed Feb 28 20:33:20 2018 -0500
   </hgroup>
   <article data-timings="">
     <div style='text-align:center;'>
-<img src="assets/img/flow_biometrie.png"  width="90%"></img>
+<img src="assets/img/flow_full_repro.png"  width="90%"></img>
 </div>
 
   </article>
@@ -475,7 +475,7 @@ Date:   Wed Feb 28 20:33:20 2018 -0500
     <h1>À quoi il sert ?</h1>
   </hgroup>
   <article data-timings="">
-    <p>Le makefile permet d&#39;exécuter une série d&#39;instructions, lorsqu&#39;elles sont nécessaires. Les dépendances sont vérifiées et seulement les instructions qui requierent une mise à jour sont exécutées.</p>
+    <p>Le makefile est un logiciel permettant d&#39;exécuter une série d&#39;instructions, lorsqu&#39;elles sont nécessaires. Les dépendances sont vérifiées et seulement les instructions qui requierent une mise à jour sont exécutées.</p>
 
 <p>Nous utiliserons le makefile pour assurer la reproductibilité de la démarche entreprise dans le cours. L&#39;ensemble des instructions nécessaires à la production du rapport, de la création de la base de données à la compilation du document écrit, seront contenues dans le makefile.</p>
 
@@ -514,7 +514,7 @@ Date:   Wed Feb 28 20:33:20 2018 -0500
 <slide class="" id="slide-26" style="background:;">
   <!--  <a href="#slide-26"></a> -->
   <hgroup>
-    <h1><target></h1>
+    <h1><code>target</code></h1>
   </hgroup>
   <article data-timings="">
     <p>La cible est habituellement le nom d&#39;un fichier généré par la commande.</p>
@@ -525,14 +525,14 @@ Date:   Wed Feb 28 20:33:20 2018 -0500
 <slide class="" id="slide-27" style="background:;">
   <!--  <a href="#slide-27"></a> -->
   <hgroup>
-    <h1><dependencies...></h1>
+    <h1><code>dependencies...</code></h1>
   </hgroup>
   <article data-timings="">
-    <p>Une dépendance (also appelée &quot;prerequesite&quot;) est un fichier qui est utilisé pour créer la target.</p>
+    <p>Une dépendance (également appelée <em>&quot;prerequesite&quot;</em>) est un fichier qui est utilisé pour créer un autre fichier appelée cible (<code>&quot;target&quot;</code>).</p>
 
-<p>La target peut contenir plusieurs dépendances.</p>
+<p>La <em>target</em> peut contenir plusieurs dépendances.</p>
 
-<p>Il est néanmoins possible d&#39;avoir une commande qui ne requiert pas de dépendance</p>
+<p>Il est néanmoins possible d&#39;avoir un fichier cible qui ne requiert pas de dépendance.</p>
 
   </article>
   <!-- Presenter Notes -->
@@ -540,24 +540,29 @@ Date:   Wed Feb 28 20:33:20 2018 -0500
 <slide class="" id="slide-28" style="background:;">
   <!--  <a href="#slide-28"></a> -->
   <hgroup>
-    <h1><commands></h1>
+    <h1><code>commands</code></h1>
   </hgroup>
   <article data-timings="">
     <p>La commande est l&#39;action à réaliser. Dans notre cas, nous utiliserons une commande pour exécuter un script R comme :</p>
 
-<pre><code class="bash">$ Rscript script.R
+<pre><code class="bash">Rscript script.R
 </code></pre>
 
-<p>Nous utiliserons également le langage de mise en forme LaTeX. Dans ce cas, la commande sera :</p>
+<p>Nous verrons plus tard dans la session le langage de mise en forme LaTeX. Dans ce cas, la commande serit:</p>
 
 <pre><code class="bash">pdflatex manuscrit.tex
 </code></pre>
 
-<hr>
-
-<h1>Un exemple</h1>
-
-<pre><code class="bash"># Troisième étape, on produit une figure à partir du modèle
+  </article>
+  <!-- Presenter Notes -->
+</slide>
+<slide class="" id="slide-29" style="background:;">
+  <!--  <a href="#slide-29"></a> -->
+  <hgroup>
+    <h1>Un exemple</h1>
+  </hgroup>
+  <article data-timings="">
+    <pre><code class="bash"># Troisième étape, on produit une figure à partir du modèle
 # et des données
 figure.pdf: model.Rdata data.txt
   Rscript script3.R
@@ -572,28 +577,28 @@ data.txt :
   Rscript script1.R
 </code></pre>
 
-<p>Ce fichier s&#39;appele makefile (sans extension) et il est exécuté en inscrivant simplement la commande make</p>
-
-  </article>
-  <!-- Presenter Notes -->
-</slide>
-<slide class="" id="slide-29" style="background:;">
-  <!--  <a href="#slide-29"></a> -->
-  <hgroup>
-    <h1>Étape par étape</h1>
-  </hgroup>
-  <article data-timings="">
-    <p>R CMD BATCH script1.R est une commande. On utiliser cette synthaxe pour lancer directement R sans jamais avoir à l&#39;ouvrir. Les scripts seront détaillés plus ploin, mais notez qu&#39;ils doivent se conclurent par quit() pour s&#39;assurer de fermer toutes les séances de R.</p>
-
-<p>Les commandes sont espacées par un <em>tab</em>, et non pas 8 espaces. C&#39;est l&#39;héritage de la création de ce langage.</p>
-
-<p>Ensemble, la cible, les dépendances et les actions constituent une règle. Cet exemple a donc 3 règles.</p>
+<p>Ce fichier s&#39;appelle makefile (sans extension) et il est exécuté en inscrivant simplement la commande <code>make</code>.</p>
 
   </article>
   <!-- Presenter Notes -->
 </slide>
 <slide class="" id="slide-30" style="background:;">
   <!--  <a href="#slide-30"></a> -->
+  <hgroup>
+    <h1>Étape par étape</h1>
+  </hgroup>
+  <article data-timings="">
+    <p><code>Rscript script1.R</code> est une commande. On utilise cette syntaxe dans le terminal pour lancer directement R sans jamais avoir à l&#39;ouvrir. Les scripts seront détaillés plus ploin, mais notez qu&#39;ils doivent se conclurent par <code>quit()</code> pour s&#39;assurer de fermer toutes les séances de R.</p>
+
+<p>Les commandes sont espacées par une <em>tabulation</em>. Prendre note que ce</p>
+
+<p>Ensemble, la cible, les dépendances et les actions constituent une règle. Cet exemple a donc 3 règles.</p>
+
+  </article>
+  <!-- Presenter Notes -->
+</slide>
+<slide class="" id="slide-31" style="background:;">
+  <!--  <a href="#slide-31"></a> -->
   <hgroup>
     <h1>Comment créer un premier makefile</h1>
   </hgroup>
@@ -608,8 +613,8 @@ data.txt :
   </article>
   <!-- Presenter Notes -->
 </slide>
-<slide class="" id="slide-31" style="background:;">
-  <!--  <a href="#slide-31"></a> -->
+<slide class="" id="slide-32" style="background:;">
+  <!--  <a href="#slide-32"></a> -->
   <hgroup>
     <h1>Script 1</h1>
   </hgroup>
@@ -632,8 +637,8 @@ save(model, file = &quot;~/Bureau/exemple/model.Rdata&quot;)
   </article>
   <!-- Presenter Notes -->
 </slide>
-<slide class="" id="slide-32" style="background:;">
-  <!--  <a href="#slide-32"></a> -->
+<slide class="" id="slide-33" style="background:;">
+  <!--  <a href="#slide-33"></a> -->
   <hgroup>
     <h1>Script 3</h1>
   </hgroup>
@@ -650,8 +655,8 @@ dev.off()
   </article>
   <!-- Presenter Notes -->
 </slide>
-<slide class="" id="slide-33" style="background:;">
-  <!--  <a href="#slide-33"></a> -->
+<slide class="" id="slide-34" style="background:;">
+  <!--  <a href="#slide-34"></a> -->
   <hgroup>
     <h1>Exécuter un makefile</h1>
   </hgroup>
@@ -664,8 +669,8 @@ dev.off()
   </article>
   <!-- Presenter Notes -->
 </slide>
-<slide class="" id="slide-34" style="background:;">
-  <!--  <a href="#slide-34"></a> -->
+<slide class="" id="slide-35" style="background:;">
+  <!--  <a href="#slide-35"></a> -->
   <hgroup>
     <h1>Les dépendances</h1>
   </hgroup>
@@ -679,8 +684,8 @@ dev.off()
   </article>
   <!-- Presenter Notes -->
 </slide>
-<slide class="" id="slide-35" style="background:;">
-  <!--  <a href="#slide-35"></a> -->
+<slide class="" id="slide-36" style="background:;">
+  <!--  <a href="#slide-36"></a> -->
   <hgroup>
     <h1>Le makefile comme outil de reproductiblité</h1>
   </hgroup>
@@ -692,8 +697,8 @@ dev.off()
   </article>
   <!-- Presenter Notes -->
 </slide>
-<slide class="" id="slide-36" style="background:;">
-  <!--  <a href="#slide-36"></a> -->
+<slide class="" id="slide-37" style="background:;">
+  <!--  <a href="#slide-37"></a> -->
   <hgroup>
     <h1>Exercice</h1>
   </hgroup>
@@ -705,8 +710,8 @@ dev.off()
   </article>
   <!-- Presenter Notes -->
 </slide>
-<slide class="" id="slide-37" style="background:;">
-  <!--  <a href="#slide-37"></a> -->
+<slide class="" id="slide-38" style="background:;">
+  <!--  <a href="#slide-38"></a> -->
   <hgroup>
     <h1>Les messages de make</h1>
   </hgroup>
@@ -724,8 +729,8 @@ dev.off()
   </article>
   <!-- Presenter Notes -->
 </slide>
-<slide class="" id="slide-38" style="background:;">
-  <!--  <a href="#slide-38"></a> -->
+<slide class="" id="slide-39" style="background:;">
+  <!--  <a href="#slide-39"></a> -->
   <hgroup>
     <h1>Les messages de make</h1>
   </hgroup>
@@ -743,8 +748,8 @@ dev.off()
   </article>
   <!-- Presenter Notes -->
 </slide>
-<slide class="" id="slide-39" style="background:;">
-  <!--  <a href="#slide-39"></a> -->
+<slide class="" id="slide-40" style="background:;">
+  <!--  <a href="#slide-40"></a> -->
   <hgroup>
     <h1>Les messages de make</h1>
   </hgroup>
@@ -761,8 +766,8 @@ dev.off()
   </article>
   <!-- Presenter Notes -->
 </slide>
-<slide class="" id="slide-40" style="background:;">
-  <!--  <a href="#slide-40"></a> -->
+<slide class="" id="slide-41" style="background:;">
+  <!--  <a href="#slide-41"></a> -->
   <hgroup>
     <h1>Nettoyage du dépôt en fin de script</h1>
   </hgroup>
@@ -780,8 +785,8 @@ dev.off()
   </article>
   <!-- Presenter Notes -->
 </slide>
-<slide class="" id="slide-41" style="background:;">
-  <!--  <a href="#slide-41"></a> -->
+<slide class="" id="slide-42" style="background:;">
+  <!--  <a href="#slide-42"></a> -->
   <hgroup>
     <h1>Dépendances</h1>
   </hgroup>
@@ -795,8 +800,8 @@ dev.off()
   </article>
   <!-- Presenter Notes -->
 </slide>
-<slide class="" id="slide-42" style="background:;">
-  <!--  <a href="#slide-42"></a> -->
+<slide class="" id="slide-43" style="background:;">
+  <!--  <a href="#slide-43"></a> -->
   <hgroup>
     <h1>Autres ressources disponibles en ligne :</h1>
   </hgroup>
@@ -812,8 +817,8 @@ dev.off()
   </article>
   <!-- Presenter Notes -->
 </slide>
-<slide class="transition" id="slide-43" style="background:;">
-  <!--  <a href="#slide-43"></a> -->
+<slide class="transition" id="slide-44" style="background:;">
+  <!--  <a href="#slide-44"></a> -->
   <hgroup>
     <h1>Travail pour la semaine</h1>
   </hgroup>
@@ -822,8 +827,8 @@ dev.off()
   </article>
   <!-- Presenter Notes -->
 </slide>
-<slide class="" id="slide-44" style="background:;">
-  <!--  <a href="#slide-44"></a> -->
+<slide class="" id="slide-45" style="background:;">
+  <!--  <a href="#slide-45"></a> -->
   <hgroup>
     <h1>Consignes</h1>
   </hgroup>
@@ -837,8 +842,8 @@ dev.off()
   </article>
   <!-- Presenter Notes -->
 </slide>
-<slide class="" id="slide-45" style="background:;">
-  <!--  <a href="#slide-45"></a> -->
+<slide class="" id="slide-46" style="background:;">
+  <!--  <a href="#slide-46"></a> -->
   <hgroup>
     <h1>Lectures</h1>
   </hgroup>
@@ -1009,73 +1014,73 @@ Research. PLoS Computational Biology. 9: e1003285</p>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=26 title='<target>'>
+        data-slide=26 title='<code>target</code>'>
          26
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=27 title='<dependencies...>'>
+        data-slide=27 title='<code>dependencies...</code>'>
          27
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=28 title='<commands>'>
+        data-slide=28 title='<code>commands</code>'>
          28
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=29 title='Étape par étape'>
+        data-slide=29 title='Un exemple'>
          29
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=30 title='Comment créer un premier makefile'>
+        data-slide=30 title='Étape par étape'>
          30
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=31 title='Script 1'>
+        data-slide=31 title='Comment créer un premier makefile'>
          31
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=32 title='Script 3'>
+        data-slide=32 title='Script 1'>
          32
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=33 title='Exécuter un makefile'>
+        data-slide=33 title='Script 3'>
          33
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=34 title='Les dépendances'>
+        data-slide=34 title='Exécuter un makefile'>
          34
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=35 title='Le makefile comme outil de reproductiblité'>
+        data-slide=35 title='Les dépendances'>
          35
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=36 title='Exercice'>
+        data-slide=36 title='Le makefile comme outil de reproductiblité'>
          36
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=37 title='Les messages de make'>
+        data-slide=37 title='Exercice'>
          37
       </a>
     </li>
@@ -1093,38 +1098,44 @@ Research. PLoS Computational Biology. 9: e1003285</p>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=40 title='Nettoyage du dépôt en fin de script'>
+        data-slide=40 title='Les messages de make'>
          40
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=41 title='Dépendances'>
+        data-slide=41 title='Nettoyage du dépôt en fin de script'>
          41
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=42 title='Autres ressources disponibles en ligne :'>
+        data-slide=42 title='Dépendances'>
          42
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=43 title='Travail pour la semaine'>
+        data-slide=43 title='Autres ressources disponibles en ligne :'>
          43
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=44 title='Consignes'>
+        data-slide=44 title='Travail pour la semaine'>
          44
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=45 title='Lectures'>
+        data-slide=45 title='Consignes'>
          45
+      </a>
+    </li>
+    <li>
+      <a href="#" target="_self" rel='tooltip' 
+        data-slide=46 title='Lectures'>
+         46
       </a>
     </li>
   </ul>
