--- a/cours5/index.html
+++ b/cours5/index.html
@@ -940,7 +940,7 @@ L[runif(S*S) &lt; C] = 1
 sum(L)
 </code></pre>
 
-<pre><code>## [1] 28
+<pre><code>## [1] 15
 </code></pre>
 
 <pre><code class="r">g &lt;- graph.adjacency(L)
@@ -1116,7 +1116,7 @@ plot(g, vertex.label=NA, edge.arrow.mode = 0,
 modularity(wtc)
 </code></pre>
 
-<pre><code>## [1] 0.3061225
+<pre><code>## [1] 0.3911111
 </code></pre>
 
   </article>
@@ -1134,35 +1134,35 @@ modularity(wtc)
 </code></pre>
 
 <pre><code>##       [,1] [,2] [,3] [,4] [,5] [,6] [,7] [,8] [,9] [,10] [,11] [,12] [,13]
-##  [1,]    0    3    2    2    2  Inf    2    2    1     3     2     1     2
-##  [2,]    3    0    2    3    1  Inf    2    1    2     2     1     2     1
-##  [3,]    2    2    0    3    1  Inf    2    2    2     3     3     3     2
-##  [4,]    2    3    3    0    2  Inf    3    3    1     3     2     3     3
-##  [5,]    2    1    1    2    0  Inf    1    1    1     3     2     2     2
-##  [6,]  Inf  Inf  Inf  Inf  Inf    0  Inf  Inf  Inf   Inf   Inf   Inf   Inf
-##  [7,]    2    2    2    3    1  Inf    0    2    2     2     3     2     1
-##  [8,]    2    1    2    3    1  Inf    2    0    2     2     2     1     1
-##  [9,]    1    2    2    1    1  Inf    2    2    0     3     3     2     2
-## [10,]    3    2    3    3    3  Inf    2    2    3     0     1     2     1
-## [11,]    2    1    3    2    2  Inf    3    2    3     1     0     1     2
-## [12,]    1    2    3    3    2  Inf    2    1    2     2     1     0     1
-## [13,]    2    1    2    3    2  Inf    1    1    2     1     2     1     0
-## [14,]    3    2    4    1    3  Inf    4    3    2     2     1     2     3
-## [15,]    1    2    1    2    2  Inf    1    2    1     2     3     2     1
+##  [1,]    0    1    1  Inf    2    2    5    1    2     2     4   Inf     2
+##  [2,]    1    0    2  Inf    3    1    4    2    3     3     3   Inf     3
+##  [3,]    1    2    0  Inf    1    3    4    2    3     1     3   Inf     1
+##  [4,]  Inf  Inf  Inf    0  Inf  Inf  Inf  Inf  Inf   Inf   Inf   Inf   Inf
+##  [5,]    2    3    1  Inf    0    3    4    3    4     1     3   Inf     2
+##  [6,]    2    1    3  Inf    3    0    3    3    4     2     2   Inf     2
+##  [7,]    5    4    4  Inf    4    3    0    6    7     3     1   Inf     3
+##  [8,]    1    2    2  Inf    3    3    6    0    1     3     5   Inf     3
+##  [9,]    2    3    3  Inf    4    4    7    1    0     4     6   Inf     4
+## [10,]    2    3    1  Inf    1    2    3    3    4     0     2   Inf     2
+## [11,]    4    3    3  Inf    3    2    1    5    6     2     0   Inf     2
+## [12,]  Inf  Inf  Inf  Inf  Inf  Inf  Inf  Inf  Inf   Inf   Inf     0   Inf
+## [13,]    2    3    1  Inf    2    2    3    3    4     2     2   Inf     0
+## [14,]    3    2    2  Inf    2    1    2    4    5     1     1   Inf     1
+## [15,]    6    5    5  Inf    5    4    1    7    8     4     2   Inf     4
 ##       [,14] [,15]
-##  [1,]     3     1
-##  [2,]     2     2
-##  [3,]     4     1
-##  [4,]     1     2
-##  [5,]     3     2
-##  [6,]   Inf   Inf
-##  [7,]     4     1
-##  [8,]     3     2
-##  [9,]     2     1
-## [10,]     2     2
-## [11,]     1     3
-## [12,]     2     2
-## [13,]     3     1
+##  [1,]     3     6
+##  [2,]     2     5
+##  [3,]     2     5
+##  [4,]   Inf   Inf
+##  [5,]     2     5
+##  [6,]     1     4
+##  [7,]     2     1
+##  [8,]     4     7
+##  [9,]     5     8
+## [10,]     1     4
+## [11,]     1     2
+## [12,]   Inf   Inf
+## [13,]     1     4
 ## [14,]     0     3
 ## [15,]     3     0
 </code></pre>
@@ -1181,9 +1181,9 @@ modularity(wtc)
 <pre><code class="r">eigen_centrality(g)$vector
 </code></pre>
 
-<pre><code>##  [1] 0.7314500 0.6280243 0.6415620 0.2217872 0.7791588 0.0000000 0.6144883
-##  [8] 0.6710540 0.8200805 0.2932462 0.3875821 0.6170108 0.8827203 0.1406714
-## [15] 1.0000000
+<pre><code>##  [1] 5.673526e-01 3.542967e-01 1.000000e+00 9.586667e-17 6.782131e-01
+##  [6] 4.236065e-01 1.426258e-01 2.325744e-01 8.315211e-02 8.969451e-01
+## [11] 3.479280e-01 9.586667e-17 6.544642e-01 8.305200e-01 5.099288e-02
 </code></pre>
 
   </article>
