--- a/cours5/index.html
+++ b/cours5/index.html
@@ -940,7 +940,7 @@ L[runif(S*S) &lt; C] = 1
 sum(L)
 </code></pre>
 
-<pre><code>## [1] 20
+<pre><code>## [1] 14
 </code></pre>
 
 <pre><code class="r">g &lt;- graph.adjacency(L)
@@ -1116,7 +1116,7 @@ plot(g, vertex.label=NA, edge.arrow.mode = 0,
 modularity(wtc)
 </code></pre>
 
-<pre><code>## [1] 0.38625
+<pre><code>## [1] 0.5433673
 </code></pre>
 
   </article>
@@ -1134,37 +1134,37 @@ modularity(wtc)
 </code></pre>
 
 <pre><code>##       [,1] [,2] [,3] [,4] [,5] [,6] [,7] [,8] [,9] [,10] [,11] [,12] [,13]
-##  [1,]    0    7    2    4    4    6    3    5    4     4     6     1     5
-##  [2,]    7    0    5    3    4    3    4    3    3     5     1     6     2
-##  [3,]    2    5    0    2    2    4    1    3    2     2     4     1     3
-##  [4,]    4    3    2    0    2    2    1    1    1     2     2     3     1
-##  [5,]    4    4    2    2    0    3    1    1    2     2     3     3     2
-##  [6,]    6    3    4    2    3    0    3    2    2     4     2     5     1
-##  [7,]    3    4    1    1    1    3    0    2    1     1     3     2     2
-##  [8,]    5    3    3    1    1    2    2    0    1     3     2     4     1
-##  [9,]    4    3    2    1    2    2    1    1    0     2     2     3     1
-## [10,]    4    5    2    2    2    4    1    3    2     0     4     3     3
-## [11,]    6    1    4    2    3    2    3    2    2     4     0     5     1
-## [12,]    1    6    1    3    3    5    2    4    3     3     5     0     4
-## [13,]    5    2    3    1    2    1    2    1    1     3     1     4     0
-## [14,]  Inf  Inf  Inf  Inf  Inf  Inf  Inf  Inf  Inf   Inf   Inf   Inf   Inf
-## [15,]  Inf  Inf  Inf  Inf  Inf  Inf  Inf  Inf  Inf   Inf   Inf   Inf   Inf
+##  [1,]    0  Inf  Inf  Inf  Inf  Inf  Inf  Inf  Inf   Inf   Inf   Inf   Inf
+##  [2,]  Inf    0    2    3  Inf    3    1  Inf  Inf     2   Inf     3     1
+##  [3,]  Inf    2    0    4  Inf    4    3  Inf  Inf     3   Inf     4     1
+##  [4,]  Inf    3    4    0  Inf    2    4  Inf  Inf     1   Inf     2     3
+##  [5,]  Inf  Inf  Inf  Inf    0  Inf  Inf  Inf  Inf   Inf   Inf   Inf   Inf
+##  [6,]  Inf    3    4    2  Inf    0    4  Inf  Inf     1   Inf     2     3
+##  [7,]  Inf    1    3    4  Inf    4    0  Inf  Inf     3   Inf     4     2
+##  [8,]  Inf  Inf  Inf  Inf  Inf  Inf  Inf    0  Inf   Inf     1   Inf   Inf
+##  [9,]  Inf  Inf  Inf  Inf  Inf  Inf  Inf  Inf    0   Inf   Inf   Inf   Inf
+## [10,]  Inf    2    3    1  Inf    1    3  Inf  Inf     0   Inf     1     2
+## [11,]  Inf  Inf  Inf  Inf  Inf  Inf  Inf    1  Inf   Inf     0   Inf   Inf
+## [12,]  Inf    3    4    2  Inf    2    4  Inf  Inf     1   Inf     0     3
+## [13,]  Inf    1    1    3  Inf    3    2  Inf  Inf     2   Inf     3     0
+## [14,]  Inf    1    2    2  Inf    2    2  Inf  Inf     1   Inf     2     1
+## [15,]  Inf  Inf  Inf  Inf  Inf  Inf  Inf  Inf    1   Inf   Inf   Inf   Inf
 ##       [,14] [,15]
 ##  [1,]   Inf   Inf
-##  [2,]   Inf   Inf
-##  [3,]   Inf   Inf
-##  [4,]   Inf   Inf
+##  [2,]     1   Inf
+##  [3,]     2   Inf
+##  [4,]     2   Inf
 ##  [5,]   Inf   Inf
-##  [6,]   Inf   Inf
-##  [7,]   Inf   Inf
+##  [6,]     2   Inf
+##  [7,]     2   Inf
 ##  [8,]   Inf   Inf
-##  [9,]   Inf   Inf
-## [10,]   Inf   Inf
+##  [9,]   Inf     1
+## [10,]     1   Inf
 ## [11,]   Inf   Inf
-## [12,]   Inf   Inf
-## [13,]   Inf   Inf
-## [14,]     0     1
-## [15,]     1     0
+## [12,]     2   Inf
+## [13,]     1   Inf
+## [14,]     0   Inf
+## [15,]   Inf     0
 </code></pre>
 
   </article>
@@ -1181,9 +1181,9 @@ modularity(wtc)
 <pre><code class="r">eigen_centrality(g)$vector
 </code></pre>
 
-<pre><code>##  [1] 9.656431e-03 6.006609e-02 1.573901e-01 1.000000e+00 4.402795e-01
-##  [6] 2.353855e-01 6.144544e-01 7.764789e-01 8.102389e-01 1.477336e-01
-## [11] 2.498272e-01 4.016308e-02 9.790165e-01 1.836542e-17 1.787762e-17
+<pre><code>##  [1] 1.112035e-16 1.000000e+00 2.511611e-01 1.712899e-01 1.112035e-16
+##  [6] 1.712899e-01 3.521159e-01 6.067593e-17 0.000000e+00 4.864587e-01
+## [11] 6.197844e-17 2.643835e-01 7.132911e-01 7.745669e-01 0.000000e+00
 </code></pre>
 
   </article>
