Update the slides

--- a/cours4/index.html
+++ b/cours4/index.html
@@ -532,7 +532,7 @@ Date:   Wed Feb 28 20:33:20 2018 -0500
 
 <p>La <em>target</em> peut contenir plusieurs dépendances.</p>
 
-<p>Il est néanmoins possible d&#39;avoir un fichier cible qui ne requiert pas de dépendance.</p>
+<p>Il est néanmoins possible d&#39;avoir un fichier cible qui ne requiert pas de dépendances.</p>
 
   </article>
   <!-- Presenter Notes -->
@@ -548,7 +548,7 @@ Date:   Wed Feb 28 20:33:20 2018 -0500
 <pre><code class="bash">Rscript script.R
 </code></pre>
 
-<p>Nous verrons plus tard dans la session le langage de mise en forme LaTeX. Dans ce cas, la commande serit:</p>
+<p>Nous verrons plus tard dans la session le langage de mise en forme LaTeX. Dans ce cas, la commande serait:</p>
 
 <pre><code class="bash">pdflatex manuscrit.tex
 </code></pre>
@@ -590,7 +590,7 @@ data.txt :
   <article data-timings="">
     <p><code>Rscript</code> est un programme permettant d&#39;exécuter du code R sans passer par la console R. On peut utiliser le terminal pour appeler le programme <code>Rscript</code> et lui donner comme argument un script R: <code>Rscript script1.R</code></p>
 
-<p>Les commandes sont espacées par une <em>tabulation</em> ou 8 espaces. Assurer vous que votre tabulation corresponds bien à 8 espaces.</p>
+<p>Les commandes sont espacées par une <em>tabulation</em> ou 8 espaces. Assurez vous que votre tabulation corresponds bien à 8 espaces.</p>
 
 <p>Ensemble, la cible, les dépendances et les actions constituent une règle. Cet exemple a donc 3 règles.</p>
 
