--- a/cours5/index.html
+++ b/cours5/index.html
@@ -940,7 +940,7 @@ L[runif(S*S) &lt; C] = 1
 sum(L)
 </code></pre>
 
-<pre><code>## [1] 14
+<pre><code>## [1] 26
 </code></pre>
 
 <pre><code class="r">g &lt;- graph.adjacency(L)
@@ -1116,7 +1116,7 @@ plot(g, vertex.label=NA, edge.arrow.mode = 0,
 modularity(wtc)
 </code></pre>
 
-<pre><code>## [1] 0.5433673
+<pre><code>## [1] 0.2285503
 </code></pre>
 
   </article>
@@ -1134,37 +1134,37 @@ modularity(wtc)
 </code></pre>
 
 <pre><code>##       [,1] [,2] [,3] [,4] [,5] [,6] [,7] [,8] [,9] [,10] [,11] [,12] [,13]
-##  [1,]    0  Inf  Inf  Inf  Inf  Inf  Inf  Inf  Inf   Inf   Inf   Inf   Inf
-##  [2,]  Inf    0    2    3  Inf    3    1  Inf  Inf     2   Inf     3     1
-##  [3,]  Inf    2    0    4  Inf    4    3  Inf  Inf     3   Inf     4     1
-##  [4,]  Inf    3    4    0  Inf    2    4  Inf  Inf     1   Inf     2     3
-##  [5,]  Inf  Inf  Inf  Inf    0  Inf  Inf  Inf  Inf   Inf   Inf   Inf   Inf
-##  [6,]  Inf    3    4    2  Inf    0    4  Inf  Inf     1   Inf     2     3
-##  [7,]  Inf    1    3    4  Inf    4    0  Inf  Inf     3   Inf     4     2
-##  [8,]  Inf  Inf  Inf  Inf  Inf  Inf  Inf    0  Inf   Inf     1   Inf   Inf
-##  [9,]  Inf  Inf  Inf  Inf  Inf  Inf  Inf  Inf    0   Inf   Inf   Inf   Inf
-## [10,]  Inf    2    3    1  Inf    1    3  Inf  Inf     0   Inf     1     2
-## [11,]  Inf  Inf  Inf  Inf  Inf  Inf  Inf    1  Inf   Inf     0   Inf   Inf
-## [12,]  Inf    3    4    2  Inf    2    4  Inf  Inf     1   Inf     0     3
-## [13,]  Inf    1    1    3  Inf    3    2  Inf  Inf     2   Inf     3     0
-## [14,]  Inf    1    2    2  Inf    2    2  Inf  Inf     1   Inf     2     1
-## [15,]  Inf  Inf  Inf  Inf  Inf  Inf  Inf  Inf    1   Inf   Inf   Inf   Inf
+##  [1,]    0    3    2    1    2    2    3  Inf    3     4     4     3     3
+##  [2,]    3    0    1    2    1    2    1  Inf    2     3     3     2     2
+##  [3,]    2    1    0    1    2    1    2  Inf    1     2     2     3     1
+##  [4,]    1    2    1    0    1    1    2  Inf    2     3     3     2     2
+##  [5,]    2    1    2    1    0    2    1  Inf    3     4     2     1     1
+##  [6,]    2    2    1    1    2    0    1  Inf    1     2     2     3     1
+##  [7,]    3    1    2    2    1    1    0  Inf    2     3     3     2     2
+##  [8,]  Inf  Inf  Inf  Inf  Inf  Inf  Inf    0  Inf   Inf   Inf   Inf   Inf
+##  [9,]    3    2    1    2    3    1    2  Inf    0     1     1     4     2
+## [10,]    4    3    2    3    4    2    3  Inf    1     0     2     5     3
+## [11,]    4    3    2    3    2    2    3  Inf    1     2     0     3     1
+## [12,]    3    2    3    2    1    3    2  Inf    4     5     3     0     2
+## [13,]    3    2    1    2    1    1    2  Inf    2     3     1     2     0
+## [14,]    4    3    4    3    2    4    3  Inf    5     6     4     1     3
+## [15,]    2    2    2    1    2    2    1  Inf    3     4     4     1     3
 ##       [,14] [,15]
-##  [1,]   Inf   Inf
-##  [2,]     1   Inf
-##  [3,]     2   Inf
-##  [4,]     2   Inf
-##  [5,]   Inf   Inf
-##  [6,]     2   Inf
-##  [7,]     2   Inf
+##  [1,]     4     2
+##  [2,]     3     2
+##  [3,]     4     2
+##  [4,]     3     1
+##  [5,]     2     2
+##  [6,]     4     2
+##  [7,]     3     1
 ##  [8,]   Inf   Inf
-##  [9,]   Inf     1
-## [10,]     1   Inf
-## [11,]   Inf   Inf
-## [12,]     2   Inf
-## [13,]     1   Inf
-## [14,]     0   Inf
-## [15,]   Inf     0
+##  [9,]     5     3
+## [10,]     6     4
+## [11,]     4     4
+## [12,]     1     1
+## [13,]     3     3
+## [14,]     0     2
+## [15,]     2     0
 </code></pre>
 
   </article>
@@ -1181,9 +1181,9 @@ modularity(wtc)
 <pre><code class="r">eigen_centrality(g)$vector
 </code></pre>
 
-<pre><code>##  [1] 1.112035e-16 1.000000e+00 2.511611e-01 1.712899e-01 1.112035e-16
-##  [6] 1.712899e-01 3.521159e-01 6.067593e-17 0.000000e+00 4.864587e-01
-## [11] 6.197844e-17 2.643835e-01 7.132911e-01 7.745669e-01 0.000000e+00
+<pre><code>##  [1] 0.15905631 0.63636486 1.00000000 0.71703577 0.63131784 0.99457980
+##  [7] 0.60108985 0.00000000 0.52566312 0.11660511 0.25853729 0.25169065
+## [13] 0.63983916 0.05583122 0.44748811
 </code></pre>
 
   </article>
