--- a/cours5/index.html
+++ b/cours5/index.html
@@ -940,7 +940,7 @@ L[runif(S*S) &lt; C] = 1
 sum(L)
 </code></pre>
 
-<pre><code>## [1] 22
+<pre><code>## [1] 18
 </code></pre>
 
 <pre><code class="r">g &lt;- graph.adjacency(L)
@@ -1116,7 +1116,7 @@ plot(g, vertex.label=NA, edge.arrow.mode = 0,
 modularity(wtc)
 </code></pre>
 
-<pre><code>## [1] 0.3894628
+<pre><code>## [1] 0.4552469
 </code></pre>
 
   </article>
@@ -1134,37 +1134,37 @@ modularity(wtc)
 </code></pre>
 
 <pre><code>##       [,1] [,2] [,3] [,4] [,5] [,6] [,7] [,8] [,9] [,10] [,11] [,12] [,13]
-##  [1,]    0    2    3    5    2    3  Inf    1    2     5     4     2     5
-##  [2,]    2    0    1    3    2    1  Inf    2    2     3     2     1     3
-##  [3,]    3    1    0    2    3    1  Inf    2    1     2     2     2     3
-##  [4,]    5    3    2    0    5    3  Inf    4    3     2     3     4     4
-##  [5,]    2    2    3    5    0    3  Inf    1    2     5     4     1     5
-##  [6,]    3    1    1    3    3    0  Inf    2    1     2     1     2     2
-##  [7,]  Inf  Inf  Inf  Inf  Inf  Inf    0  Inf  Inf   Inf   Inf   Inf   Inf
-##  [8,]    1    2    2    4    1    2  Inf    0    1     4     3     1     4
-##  [9,]    2    2    1    3    2    1  Inf    1    0     3     2     2     3
-## [10,]    5    3    2    2    5    2  Inf    4    3     0     1     4     2
-## [11,]    4    2    2    3    4    1  Inf    3    2     1     0     3     1
-## [12,]    2    1    2    4    1    2  Inf    1    2     4     3     0     4
-## [13,]    5    3    3    4    5    2  Inf    4    3     2     1     4     0
-## [14,]    4    2    1    1    4    2  Inf    3    2     1     2     3     3
-## [15,]    1    1    2    4    2    2  Inf    2    3     4     3     1     4
+##  [1,]    0    6  Inf  Inf    1    2    5    6    5     6     4     2     4
+##  [2,]    6    0  Inf  Inf    5    4    4    2    2     1     2     6     3
+##  [3,]  Inf  Inf    0    1  Inf  Inf  Inf  Inf  Inf   Inf   Inf   Inf   Inf
+##  [4,]  Inf  Inf    1    0  Inf  Inf  Inf  Inf  Inf   Inf   Inf   Inf   Inf
+##  [5,]    1    5  Inf  Inf    0    1    4    5    4     5     3     1     3
+##  [6,]    2    4  Inf  Inf    1    0    3    4    3     4     2     2     2
+##  [7,]    5    4  Inf  Inf    4    3    0    5    2     3     3     5     1
+##  [8,]    6    2  Inf  Inf    5    4    5    0    3     2     2     6     4
+##  [9,]    5    2  Inf  Inf    4    3    2    3    0     1     1     5     1
+## [10,]    6    1  Inf  Inf    5    4    3    2    1     0     2     6     2
+## [11,]    4    2  Inf  Inf    3    2    3    2    1     2     0     4     2
+## [12,]    2    6  Inf  Inf    1    2    5    6    5     6     4     0     4
+## [13,]    4    3  Inf  Inf    3    2    1    4    1     2     2     4     0
+## [14,]    3    3  Inf  Inf    2    1    2    3    2     3     1     3     1
+## [15,]    5    1  Inf  Inf    4    3    4    1    2     1     1     5     3
 ##       [,14] [,15]
-##  [1,]     4     1
-##  [2,]     2     1
-##  [3,]     1     2
-##  [4,]     1     4
-##  [5,]     4     2
-##  [6,]     2     2
-##  [7,]   Inf   Inf
-##  [8,]     3     2
-##  [9,]     2     3
-## [10,]     1     4
-## [11,]     2     3
-## [12,]     3     1
-## [13,]     3     4
-## [14,]     0     3
-## [15,]     3     0
+##  [1,]     3     5
+##  [2,]     3     1
+##  [3,]   Inf   Inf
+##  [4,]   Inf   Inf
+##  [5,]     2     4
+##  [6,]     1     3
+##  [7,]     2     4
+##  [8,]     3     1
+##  [9,]     2     2
+## [10,]     3     1
+## [11,]     1     1
+## [12,]     3     5
+## [13,]     1     3
+## [14,]     0     2
+## [15,]     2     0
 </code></pre>
 
   </article>
@@ -1181,9 +1181,9 @@ modularity(wtc)
 <pre><code class="r">eigen_centrality(g)$vector
 </code></pre>
 
-<pre><code>##  [1] 0.50518666 0.82921152 0.61996733 0.05914574 0.80337315 0.61996733
-##  [7] 0.00000000 1.00000000 0.61003919 0.11829148 0.21717063 0.94981598
-## [13] 0.05914574 0.21717063 0.85493836
+<pre><code>##  [1] 7.124473e-02 5.828985e-01 1.020968e-16 8.304156e-17 2.230656e-01
+##  [6] 5.559237e-01 1.683282e-01 2.635094e-01 7.230365e-01 1.000000e+00
+## [11] 7.367789e-01 7.124473e-02 5.270317e-01 7.587594e-01 8.250418e-01
 </code></pre>
 
   </article>
