Update the slides

--- a/cours4/index.html
+++ b/cours4/index.html
@@ -127,7 +127,7 @@
 <slide class="" id="slide-5" style="background:;">
   <!--  <a href="#slide-5"></a> -->
   <hgroup>
-    <h1>Système de contrôle éxistants</h1>
+    <h1>Systèmes de contrôle éxistants</h1>
   </hgroup>
   <article data-timings="">
     <h2>Un exemple avec Dropbox</h2>
@@ -140,7 +140,7 @@
 <slide class="" id="slide-6" style="background:;">
   <!--  <a href="#slide-6"></a> -->
   <hgroup>
-    <h1>Système de contrôle éxistants</h1>
+    <h1>Systèmes de contrôle éxistants</h1>
   </hgroup>
   <article data-timings="">
     <h2>Un exemple MS Word</h2>
@@ -254,7 +254,7 @@ ls -a # Lister tous le contenu du répertoire de travail.
 
 <p>On répète ces étapes à plusieurs reprises au cours de l&#39;écriture d&#39;un document et/ou de l&#39;avancé d&#39;un projet.</p>
 
-<p><strong>Qu&#39;est ce qu&#39;un bon commentaire?</strong></p>
+<p><strong>Question</strong>: Qu&#39;est ce qu&#39;un bon commentaire?</p>
 
   </article>
   <!-- Presenter Notes -->
@@ -1048,13 +1048,13 @@ Research. PLoS Computational Biology. 9: e1003285</p>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=5 title='Système de contrôle éxistants'>
+        data-slide=5 title='Systèmes de contrôle éxistants'>
          5
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=6 title='Système de contrôle éxistants'>
+        data-slide=6 title='Systèmes de contrôle éxistants'>
          6
       </a>
     </li>
