--- a/cours5/index.html
+++ b/cours5/index.html
@@ -1116,7 +1116,7 @@ plot(g, vertex.label=NA, edge.arrow.mode = 0,
 modularity(wtc)
 </code></pre>
 
-<pre><code>## [1] 0.3646694
+<pre><code>## [1] 0.3853306
 </code></pre>
 
   </article>
@@ -1134,37 +1134,37 @@ modularity(wtc)
 </code></pre>
 
 <pre><code>##       [,1] [,2] [,3] [,4] [,5] [,6] [,7] [,8] [,9] [,10] [,11] [,12] [,13]
-##  [1,]    0    2    3    4  Inf    2    2    3    1     3     1     1     2
-##  [2,]    2    0    3    4  Inf    2    4    1    3     3     1     3     2
-##  [3,]    3    3    0    1  Inf    1    1    3    3     2     2     2     2
-##  [4,]    4    4    1    0  Inf    2    2    4    4     3     3     3     3
-##  [5,]  Inf  Inf  Inf  Inf    0  Inf  Inf  Inf  Inf   Inf   Inf   Inf   Inf
-##  [6,]    2    2    1    2  Inf    0    2    3    3     1     1     3     2
-##  [7,]    2    4    1    2  Inf    2    0    4    3     1     3     1     3
-##  [8,]    3    1    3    4  Inf    3    4    0    4     3     2     4     1
-##  [9,]    1    3    3    4  Inf    3    3    4    0     3     2     2     3
-## [10,]    3    3    2    3  Inf    1    1    3    3     0     2     2     2
-## [11,]    1    1    2    3  Inf    1    3    2    2     2     0     2     1
-## [12,]    1    3    2    3  Inf    3    1    4    2     2     2     0     3
-## [13,]    2    2    2    3  Inf    2    3    1    3     2     1     3     0
-## [14,]    3    3    1    2  Inf    2    2    2    2     1     2     3     1
-## [15,]    2    4    2    3  Inf    3    3    3    1     2     3     3     2
+##  [1,]    0    3    1    3    3    4    2    2    4     2     4     3     1
+##  [2,]    3    0    2    1    4    2    3    3    5     1     5     3     2
+##  [3,]    1    2    0    2    3    3    1    2    4     1     4     3     1
+##  [4,]    3    1    2    0    4    1    3    3    5     1     5     3     2
+##  [5,]    3    4    3    4    0    5    4    1    1     3     1     2     2
+##  [6,]    4    2    3    1    5    0    4    4    6     2     6     4     3
+##  [7,]    2    3    1    3    4    4    0    3    5     2     5     2     2
+##  [8,]    2    3    2    3    1    4    3    0    2     2     2     1     1
+##  [9,]    4    5    4    5    1    6    5    2    0     4     2     3     3
+## [10,]    2    1    1    1    3    2    2    2    4     0     4     2     1
+## [11,]    4    5    4    5    1    6    5    2    2     4     0     3     3
+## [12,]    3    3    3    3    2    4    2    1    3     2     3     0     2
+## [13,]    1    2    1    2    2    3    2    1    3     1     3     2     0
+## [14,]    4    1    3    2    5    3    4    4    6     2     6     4     3
+## [15,]    3    2    2    2    3    3    1    2    4     1     4     1     2
 ##       [,14] [,15]
-##  [1,]     3     2
-##  [2,]     3     4
-##  [3,]     1     2
-##  [4,]     2     3
-##  [5,]   Inf   Inf
-##  [6,]     2     3
-##  [7,]     2     3
-##  [8,]     2     3
-##  [9,]     2     1
-## [10,]     1     2
-## [11,]     2     3
-## [12,]     3     3
-## [13,]     1     2
-## [14,]     0     1
-## [15,]     1     0
+##  [1,]     4     3
+##  [2,]     1     2
+##  [3,]     3     2
+##  [4,]     2     2
+##  [5,]     5     3
+##  [6,]     3     3
+##  [7,]     4     1
+##  [8,]     4     2
+##  [9,]     6     4
+## [10,]     2     1
+## [11,]     6     4
+## [12,]     4     1
+## [13,]     3     2
+## [14,]     0     3
+## [15,]     3     0
 </code></pre>
 
   </article>
@@ -1181,9 +1181,9 @@ modularity(wtc)
 <pre><code class="r">eigen_centrality(g)$vector
 </code></pre>
 
-<pre><code>##  [1] 0.3153546 0.2434742 0.7698536 0.2301464 0.0000000 0.6818274 0.9110588
-##  [8] 0.3035357 0.1773460 1.0000000 0.5109001 0.3666342 0.4683353 0.7521740
-## [15] 0.2778784
+<pre><code>##  [1] 0.57947403 0.81263056 0.74445184 0.82996382 0.09749466 0.32489503
+##  [7] 0.33087535 0.29169452 0.02742805 1.00000000 0.02742805 0.20350168
+## [13] 0.73584929 0.22861636 0.43166442
 </code></pre>
 
   </article>
